--- a/index.html
+++ b/index.html
@@ -1,55 +1,38 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Static/Styles/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-  </head>
-  <body>
-    <main class="main">
-      <nav id="nav-bar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-      </nav>
-      <div class="home-container">
-        <div class="container-left">
-          <div class="pro-image-container"></div><img
-            />
-          </div>
-        </div>
-        <div class="container-right">
-          <h1 id="greet">Hey! 👋</h1>
-          <h1 id="name">I am Megha</h1>
-          <p>Final year Computer Science Undergraduate</p>
-        </div>
-      </div>
-    </main>
-    <footer class="home-footer">
-      <div class="fcontainer-left">
-        <div class="map-container">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3934.898679759091!2d76.33196931472301!3d9.517531993182946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOcKwMzEnMDMuMSJOIDc2wrAyMCcwMy4wIkU!5e0!3m2!1sen!2sin!4v1677483095399!5m2!1sen!2sin"
-            width="500"
-            height="350"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-      </div>
-      <div class="fcontainer-right"></div>
-    </footer>
-  </body>
-</html>
-
+    <link rel="stylesheet" href="style.css">
+    <style>
+        h1 {text-align: center;}
+        p {text-align: center;}
+        div {text-align: center;}
+        </style>
+</head>
+<body>
+    <header>
+        <h1>
+                Welcome to my portfolio
+        </h1>
+    </header>
     
+    <div class="navbar">
+    <div>
+        <a href="./index.html">Home</a>
+    </div>
+    <div>
+        <a href="./about.html">About</a>
+    </div>
+    <div>
+        <a href="./contact.html"> Contact</a>
+    </div>
+    </div>
+    <div class="pic">
+        <img src="images\cd84a90ebdf252b443f0d8c8da4d3318.jpg">
+    </div>
+<p>Hello, everyone! My name is Megha and I'm from Pathanamthitta. I'm currently pursuing Btech at Providence College, and I hope to become a web developer one day. I'm really passionate about web development, and I'm always looking for new ways to learn and improve my skills.</p>
+</body>
+</html>
